# lab20

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  ordered_array.c  ordered_array.h  unordered_array.c  unordered_array.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: autotest_bitset.c  bitset.c  bitset.h
libs/data_structures/lab20/: lab20.c  lab20.h
libs/data_structures/matrix/: matrix.c  matrix.h
